WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99227
Dynamically added elements do not get re-projected.
https://bugs.webkit.org/show_bug.cgi?id=99227
Summary
Dynamically added elements do not get re-projected.
Steve Orvell
Reported
2012-10-12 18:05:58 PDT
Created
attachment 168521
[details]
Reduction which can show failure of dynamic reprojection. If a host has shadowRoot A with a nested shadowRoot B that includes an insertion point in its light dom, if elements are added to the host dynamically, these elements are not projected as expected into B. It's unclear if they are projecting at all as they do not render.
Attachments
Reduction which can show failure of dynamic reprojection.
(642 bytes, text/html)
2012-10-12 18:05 PDT
,
Steve Orvell
no flags
Details
Patch
(3.96 KB, patch)
2012-10-17 05:37 PDT
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Shinya Kawanaka
Comment 1
2012-10-16 23:25:46 PDT
I'll take a look
Shinya Kawanaka
Comment 2
2012-10-17 05:37:29 PDT
Created
attachment 169166
[details]
Patch
WebKit Review Bot
Comment 3
2012-10-17 10:07:43 PDT
Comment on
attachment 169166
[details]
Patch Clearing flags on attachment: 169166 Committed
r131615
: <
http://trac.webkit.org/changeset/131615
>
WebKit Review Bot
Comment 4
2012-10-17 10:07:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug