Dynamically added elements do not get re-projected. https://bugs.webkit.org/show_bug.cgi?id=99227

Reviewed by Dimitri Glazkov.

Source/WebCore:

When distribution happens, we have to invalidate its host shadow's distribution, since the children of the host
is changed.

Test: fast/dom/shadow/content-reprojection-dynamic.html

* html/shadow/ContentDistributor.cpp:
(WebCore::ContentDistributor::distribute):

LayoutTests:

* fast/dom/shadow/content-reprojection-dynamic-expected.html: Added.
* fast/dom/shadow/content-reprojection-dynamic.html: Added.


Canonical link: https://commits.webkit.org/117571@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131615 268f45cc-cd09-0410-ab3c-d52691b4dbfc